--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "publisher": "vscjava",
   "preview": true,
   "displayName": "GitHub Copilot app modernization extension pack for Java",
-  "description": "Modernize your Java applications with GitHub Copilot.",
+  "description": "Modernize and migrate your Java applications to the cloud with Github Copilot.",
   "version": "0.1.2",
   "engines": {
     "vscode": "^1.99.0"
